--- a/views/admin-signin.html
+++ b/views/admin-signin.html
@@ -15,9 +15,12 @@
 
 <body>
 
+    <br><br>
+    <h2 style="text-align: center; font-size: 25px; color: white;">Admin Login</h2>
+
     <div id="login">
         
-        <form action="/signin" method="POST">
+        <form action="/admin/signin" method="POST">
             
             <fieldset class="clearfix">
                 
@@ -29,12 +32,6 @@
 
         </form>
         
-        <p>Not a member? <a href="/signup">Sign up now</a><span class="fontawesome-arrow-right"></span></p>
-        
-        <br>
-
-        <p>Admin? <a href="/admin/signin">Sign In</a><span class="fontawesome-arrow-right"></span></p>
-
     </div> <!-- end login -->
 
 </body>
