--- a/views/iphone-white.html
+++ b/views/iphone-white.html
@@ -57,7 +57,7 @@
                         <li class="nav-item"><a class="scrollto" href="#faq">FAQ</a></li>
                         <li class="nav-item"><a class="scrollto" href="#story">Story</a></li>
                         <li class="nav-item"><a class="scrollto" href="#pricing">Pricing</a></li>
-                        <li class="nav-item"><a href="/signin">Sign In</a></li>
+                        <li class="nav-item last"><a class="active" href="/signin">Sign In</a></li>
 
                     </ul><!--//nav-->
                 </div><!--//navabr-collapse-->
@@ -70,23 +70,27 @@
         <div class="container">
             <div class="row">
                 <div class="overview col-md-8 col-sm-12 col-xs-12">
-                    <h2 class="title">Delta helps you promote your mobile app</h2>
-                    <ul class="summary">
-                        <li>Showcase and promote your mobile app to the web</li>
-                        <li>Demonstrate how the app works</li>
-                        <li>Provide answers to common questions</li>
-                        <li>Tell the world about the story behind the app</li>
+                    <h2 class="title">At our roots we specialize in starting businesses, brands, apps, and the strategic marketing behind them.</h2>
+
+                    <ul class='summary' style='margin-left: -30px; padding-right: 40px; margin-bottom: 30px; font-size: 16px;'>
+                        <p>We also have a knack for automating monotonous tasks. A few of our lagrest automated services we currently offer are trading favorites on large twitter accounts, scheduling posts on twitter, instagram, & Facebook, and strategic mass following/liking on twitter.</p>
                     </ul>
+
+                    <ul class="summary">
+                        <li>Impressions by the millions</li>
+                        <li>Marketing Campaigns</li>
+                        <li>D20NS (Fav Trading)</li>
+                        <li>Social media post scheduling</li>
+                        <li>Business Consulting</li>
+                        <li>Build-a-Brand</li>
+                    </ul>
+
                     <div class="download-area">
-                        <ul class="btn-group list-inline">
-                            <li class="ios-btn"><a href="#">Download from the App Store</a></li>
-                            <li class="android-btn"><a href="#">Get it from Google Play</a></li>
+                        <ul class="list-inline">
+                            <li class="btn btn-lg btn-default nav-item" style='margin-left: 150px; width: 150px;'><a class="scrollto" href="#features">Learn More</a></li>
+                            <li class="btn btn-lg btn-default" style='margin-left: 50px; width: 150px;'><a href="/signup">Sign Up Now</a></li>
                         </ul>
-                        <div class="note text-center">
-                            <p>30% OFF - Now only $0.99<br />Offer ends 31st March</p>
-                            <span class="left-arrow"></span>
-                            <span class="right-arrow"></span>
-                        </div><!--//note-->
+                        
                     </div>
                 </div><!--//overview-->
                 
@@ -123,21 +127,21 @@
                 <h2 class="title text-center sr-only">Features</h2>
                 <div class="item col-md-3 col-sm-6 col-xs-12 text-center">
                     <div class="icon">
-                        <i class="fa fa-cloud-upload"></i>                
+                        <i class="fa fa-globe"></i>                
                     </div><!--//icon-->
                     <div class="content">
-                        <h3 class="title">App Feature One</h3>
-                        <p>Outline an app feature/benefit here. You can change the icon above to any of the 500+ <a href="http://fortawesome.github.io/Font-Awesome/icons/" target="_blank">FontAwesome icons</a> available. </p>  
+                        <h3 class="title">Impressions By The Millions</h3>
+                        <p>If you are looking to put your brand, product, or app put in front of millions of people we can help.  </p>  
                         <button class="modal-trigger btn btn-link" data-toggle="modal" data-target="#feature-modal-1">Find out more</button>
                     </div><!--//content-->               
                 </div><!--//item-->
                 <div class="item col-md-3 col-sm-6 col-xs-12 text-center">
                     <div class="icon">
-                        <i class="fa fa-rocket"></i>                
+                        <i class="fa fa-industry"></i>                
                     </div><!--//icon-->
                     <div class="content">
-                        <h3 class="title">App Feature Two</h3>
-                        <p>Outline an app feature/benefit here. You can change the icon above to any of the 500+ <a href="http://fortawesome.github.io/Font-Awesome/icons/" target="_blank">FontAwesome icons</a> available. </p>   
+                        <h3 class="title">Marketing Campaigns</h3>
+                        <p>We create fully original and innovative marketing campaigns for app promotions to movie trailers. </p>   
                         <button class="modal-trigger btn btn-link" data-toggle="modal" data-target="#feature-modal-1">Find out more</button>
                     </div><!--//content-->               
                 </div><!--//item-->
@@ -146,17 +150,17 @@
                         <i class="fa fa-users"></i>                
                     </div><!--//icon-->
                     <div class="content">
-                        <h3 class="title">App Feature Three</h3>
-                        <p>Outline an app feature/benefit here. You can change the icon above to any of the 500+ <a href="http://fortawesome.github.io/Font-Awesome/icons/" target="_blank">FontAwesome icons</a> available. </p> 
+                        <h3 class="title">D20NS</h3>
+                        <p>We offer a completely automated favorite retweeting service that trades with accounts of a similar size. (based on impressions) </p> 
                         <button class="modal-trigger btn btn-link" data-toggle="modal" data-target="#feature-modal-1">Find out more</button>  
                     </div><!--//content-->               
                 </div><!--//item-->
                 <div class="item col-md-3 col-sm-6 col-xs-12 text-center">
                     <div class="icon">
-                        <i class="fa fa-map-marker"></i>                
+                        <i class="fa fa-clock-o"></i>                
                     </div><!--//icon-->
                     <div class="content">
-                        <h3 class="title">App Feature Four</h3>
+                        <h3 class="title">Social Media Post Scheduling</h3>
                         <p>Outline an app feature/benefit here. You can change the icon above to any of the 500+ <a href="http://fortawesome.github.io/Font-Awesome/icons/" target="_blank">FontAwesome icons</a> available. </p>   
                         <button class="modal-trigger btn btn-link" data-toggle="modal" data-target="#feature-modal-1">Find out more</button>
                     </div><!--//content-->               
@@ -166,32 +170,31 @@
             <div class="row feature-row-last">
                 <div class="item col-md-4 col-sm-6 col-xs-12 text-center">
                     <div class="icon">
-                        <i class="fa fa-calendar"></i>                
+                        <i class="fa fa-bar-chart"></i>                
                     </div><!--//icon-->
                     <div class="content">
-                        <h3 class="title">App Feature One</h3>
-                        <p>Outline an app feature/benefit here. You can change the icon above to any of the 500+ <a href="http://fortawesome.github.io/Font-Awesome/icons/" target="_blank">FontAwesome icons</a> available. </p>  
+                        <h3 class="title">Business Consulting</h3>
+                        <p>We are here to advise your business at any point whether you’re just starting out or have been in business for decades. </p>  
                         <button class="modal-trigger btn btn-link" data-toggle="modal" data-target="#feature-modal-1">Find out more</button>
                     </div><!--//content-->               
                 </div><!--//item-->
                 <div class="item col-md-4 col-sm-6 col-xs-12 text-center">
                     <div class="icon">
-                        <i class="fa fa-comments"></i>                
+                        <i class="fa fa-cubes"></i>                
                     </div><!--//icon-->
                     <div class="content">
-                        <h3 class="title">App Feature Two</h3>
+                        <h3 class="title">Build-a-Brand</h3>
                         <p>Outline an app feature/benefit. You can change the icon above to any of the 500+ <a href="http://fortawesome.github.io/Font-Awesome/icons/" target="_blank">FontAwesome icons</a> available. </p>  
                         <button class="modal-trigger btn btn-link" data-toggle="modal" data-target="#feature-modal-1">Find out more</button>
                     </div><!--//content-->               
                 </div><!--//item-->
                 <div class="item col-md-4 col-sm-6 col-xs-12 text-center">
                     <div class="icon">
-                        <i class="fa fa-globe"></i>
+                        <i class="fa fa-hourglass"></i>
                     </div><!--//icon-->
                     <div class="content">
-                        <h3 class="title">App Feature Three</h3>
-                        <p>Outline an app feature/benefit here. You can change the icon above to any of the 500+ <a href="http://fortawesome.github.io/Font-Awesome/icons/" target="_blank">FontAwesome icons</a> available. </p> 
-                        <button class="modal-trigger btn btn-link" data-toggle="modal" data-target="#feature-modal-1">Find out more</button>  
+                        <h3 class="title">Coming Soon!</h3>
+                        <p>We're building something pretty awesome... </p> 
                     </div><!--//content-->               
                 </div><!--//item-->
             </div><!--//row-->
@@ -245,7 +248,7 @@
         <div class="container">
             <div class="row">
                 <div class="content col-md-6 col-sm-6 col-xs-12 text-center">
-                    <h2 class="title">Story behind the app</h2>
+                    <h2 class="title">Story behind the technology</h2>
                     <p>Aliquam euismod vehicula lacus, non congue ante pulvinar a. Nunc eu posuere risus, ut condimentum ante. Suspendisse at turpis sollicitudin odio congue lobortis vitae nec nisi. Nullam sodales at libero in lacinia. Nullam vel nibh pulvinar, interdum purus tristique, iaculis turpis. Integer imperdiet tincidunt erat vel gravida. Suspendisse tincidunt orci sed leo euismod, quis ultrices ipsum lobortis. Sed viverra dui et elit accumsan accumsan. Donec lorem turpis, iaculis ac fermentum nec, dignissim sed nisi. Nunc condimentum turpis arcu, eu aliquet lorem eleifend ut. Integer at lorem nec diam elementum convallis vel vel nulla.</p>
                     <p>Nullam vel nibh pulvinar, interdum purus tristique, iaculis turpis. Integer imperdiet tincidunt erat vel gravida. eleifend ut. Integer at lorem nec diam elementum convallis vel vel nulla.</p>
                 </div><!--//content-->
@@ -288,14 +291,14 @@
                         <div class="item-inner">
                             <div class="heading">
                             <h3 class="title">Personal</h3>
-                                <p class="price-figure"><span class="price-figure-inner"><span class="currency">$</span><span class="number">5</span><br /><span class="unit"> per month</span></span></p>
+                                <p class="price-figure"><span class="price-figure-inner"><span class="currency">$</span><span class="number">19.99</span><br /><span class="unit"> per month</span></span></p>
                             </div>
                             <div class="content">
                                 <ul class="list-unstyled feature-list">
-                                    <li><i class="fa fa-check"></i>1 user</li>
+                                    <li><i class="fa fa-check"></i>5 accounts</li>
                                     <li><i class="fa fa-check"></i>10 GB storage</li>
+                                    <li><i class="fa fa-check"></i>Daily Updates</li>
                                     <li class="disabled"><i class="fa fa-times"></i>Email priority support</li>
-                                    <li class="disabled"><i class="fa fa-times"></i>Free update</li>
                                     <li class="disabled"><i class="fa fa-times"></i>24/7 support</li>
                                 </ul>
                                 <a class="btn btn-theme btn-block" href="#">Sign Up</a>
@@ -308,14 +311,14 @@
                         <div class="item-inner">
                             <div class="heading">
                             <h3 class="title">Professional</h3>
-                                <p class="price-figure"><span class="price-figure-inner"><span class="currency">$</span><span class="number">10</span><br /><span class="unit">per month</span></span></p>
+                                <p class="price-figure"><span class="price-figure-inner"><span class="currency">$</span><span class="number">49.99</span><br /><span class="unit">per month</span></span></p>
                             </div>
                             <div class="content">
                                 <ul class="list-unstyled feature-list">
-                                    <li><i class="fa fa-check"></i>10 users</li>
+                                    <li><i class="fa fa-check"></i>20 accounts</li>
                                     <li><i class="fa fa-check"></i>30 GB storage</li>
+                                    <li><i class="fa fa-check"></i>Hourly Updates</li>
                                     <li><i class="fa fa-check"></i>Email priority support</li>
-                                    <li><i class="fa fa-check"></i>Free update</li>
                                     <li class="disabled"><i class="fa fa-times"></i>24/7 support</li>
                                     
                                 </ul>
@@ -331,14 +334,14 @@
                         <div class="item-inner">
                             <div class="heading">
                                 <h3 class="title">Business</h3>
-                                <p class="price-figure"><span class="price-figure-inner"><span class="currency">$</span><span class="number">25</span><br /><span class="unit">per month</span></span></p>
+                                <p class="price-figure"><span class="price-figure-inner"><span class="currency">$</span><span class="number">99.99</span><br /><span class="unit">per month</span></span></p>
                             </div>
                             <div class="content">
                                 <ul class="list-unstyled feature-list">
-                                    <li><i class="fa fa-check"></i>Unlimited user</li>
+                                    <li><i class="fa fa-check"></i>Unlimited accounts</li>
                                     <li><i class="fa fa-check"></i>100 GB storage</li>
+                                    <li><i class="fa fa-check"></i>Real-Time Updates</li>
                                     <li><i class="fa fa-check"></i>Email priority support</li>
-                                    <li><i class="fa fa-check"></i>Free update</li>
                                     <li><i class="fa fa-check"></i>24/7 support</li>                                  
                                 </ul>
                                 <a class="btn btn-theme btn-block" href="#">Sign Up</a>
@@ -355,7 +358,7 @@
     <!-- ******FOOTER****** --> 
     <footer class="footer">
         <div class="container">
-            <small class="copyright pull-left">Copyright &copy; 2016 <a href="http://themes.3rdwavemedia.com/" target="_blank">3rd Wave Media</a></small>
+            <small class="copyright pull-left">Copyright &copy; 2016 Phenomenal</small>
             <ul class="links list-inline">
                 <li><a href="#">Terms</a></li>
                 <li><a href="#">Privacy</a></li>
