--- a/views/me.jade
+++ b/views/me.jade
@@ -49,7 +49,7 @@ html
 		if user.admin
 			a.navbar-brand(href='/dashboard') Phenomenal
 		else
-			a.navbar-branch(href='/me') Phenomenal
+			a.navbar-brand(href='/me') Phenomenal
 		// Top Menu Items
 		ul.nav.navbar-right.top-nav
 			li.dropdown
@@ -147,7 +147,7 @@ html
 							|  Settings
 					li.divider
 					li
-						a(href='#')
+						a(href='/logout')
 							i.fa.fa-fw.fa-power-off
 							|  Log Out
 						// /.navbar-collapse
