--- a/views/iphone-white.html
+++ b/views/iphone-white.html
@@ -85,9 +85,9 @@
                         <li>Build-a-Brand</li>
                     </ul>
 
-                    <div class="download-area">
+                    <div class="download-area col-sm-12 col-xs-12">
                         <ul class="list-inline">
-                            <li class="btn btn-lg btn-default nav-item" style='margin-left: 150px; width: 150px;'><a class="scrollto" href="#features">Learn More</a></li>
+                            <li class="btn btn-lg btn-default nav-item" style='margin-left: 50px; width: 150px;'><a class="scrollto" href="#features">Learn More</a></li>
                             <li class="btn btn-lg btn-default" style='margin-left: 50px; width: 150px;'><a href="/signup">Sign Up Now</a></li>
                         </ul>
                         
@@ -209,12 +209,12 @@
                 <h2 class="title text-center">Frequently Asked Questions</h2>
                 <div class="faq-col col-md-6 col-sm-6 col-xs-12">
                     <div class="item">
-                        <h3 class="question"><i class="fa fa-question-circle"></i>How can I  ipsum dolor sit amet?</h3>
-                        <p class="answer">Proin scelerisque magna ac eros aliquam aliquam id in lacus. Morbi quam tortor, consequat at orci non, vulputate volutpat libero. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean sagittis laoreet urna eu ornare. Aenean tempor, leo vel eleifend porttitor, nibh libero ultricies est, sit amet ultricies magna enim et turpis. Donec aliquam velit eu sollicitudin cursus.</p>
+                        <h3 class="question"><i class="fa fa-question-circle"></i>How does D20NS work?</h3>
+                        <p class="answer">We've built some pretty complex algorithms to ensure we exceed expectations. We sort your account based on impressions. From there it goes into a pool with similar sized accounts. It then trades 24/7 (unless specified otherwise) with the other accounts in the pool. We guarantee 60+ trades a day which means your impressions will be through the roof.</p>
                     </div><!--//item-->
                     <div class="item">
-                        <h3 class="question"><i class="fa fa-question-circle"></i>What is the ipsum dolor sit amet quam tortor?</h3>
-                        <p class="answer">Proin scelerisque magna ac eros aliquam aliquam id in lacus. Morbi quam tortor, consequat at orci non, vulputate volutpat libero. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean sagittis laoreet urna eu ornare.</p>
+                        <h3 class="question"><i class="fa fa-question-circle"></i>Do you really guarantee millions of impressions?</h3>
+                        <p class="answer">If we do not reach the impression count you have paid for we will refund 25% and continue going until we do so.</p>
                     </div><!--//item-->
                     <div class="item">
                         <h3 class="question"><i class="fa fa-question-circle"></i>What's the differences between ipsum and dolor sit amet?</h3>
@@ -249,19 +249,17 @@
             <div class="row">
                 <div class="content col-md-6 col-sm-6 col-xs-12 text-center">
                     <h2 class="title">Story behind the technology</h2>
-                    <p>Aliquam euismod vehicula lacus, non congue ante pulvinar a. Nunc eu posuere risus, ut condimentum ante. Suspendisse at turpis sollicitudin odio congue lobortis vitae nec nisi. Nullam sodales at libero in lacinia. Nullam vel nibh pulvinar, interdum purus tristique, iaculis turpis. Integer imperdiet tincidunt erat vel gravida. Suspendisse tincidunt orci sed leo euismod, quis ultrices ipsum lobortis. Sed viverra dui et elit accumsan accumsan. Donec lorem turpis, iaculis ac fermentum nec, dignissim sed nisi. Nunc condimentum turpis arcu, eu aliquet lorem eleifend ut. Integer at lorem nec diam elementum convallis vel vel nulla.</p>
-                    <p>Nullam vel nibh pulvinar, interdum purus tristique, iaculis turpis. Integer imperdiet tincidunt erat vel gravida. eleifend ut. Integer at lorem nec diam elementum convallis vel vel nulla.</p>
+                    <p>Phenomenal is much more than just a Marketing & Tech company. It is a standard that we expect to meet with 100% of the work we produce. It is about raising the bar so you no longer have to settle.</p>
+                    <p> Our goal is to help start the next wave of successful businesses while creating tools for them to use that helps ensure their time is being spent as efficiently as possible.</p>
                 </div><!--//content-->
                 <div class="team col-md-5 col-sm-5 col-md-offset-1 col-sm-offset-1 col-xs-12">
                     <div class="row">
                         <div class="member col-md-6 text-center">
-                            <img class="img-circle" src="images/team/member-1.png" alt="" width='175px' height='175px' />
+                            <img class="img-circle" src="images/profile2.jpg" alt="" width='175px' height='175px' />
                             <p class="name">Bryan Mitchell</p>
                             <p class="title">CEO | Founder</p>
                             <ul class="connect list-inline">
-                                <li><a href="#" ><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#" ><i class="fa fa-linkedin"></i></a></li>
-                                <li class="row-end"><a href="#" ><i class="fa fa-github"></i></a></li>         
+                                <li><a href="https://twitter.com/sirbryanthewise" ><i class="fa fa-twitter"></i></a></li>      
                             </ul>
                         </div><!--//member-->
                         <div class="member col-md-6 text-center">
@@ -286,6 +284,7 @@
         <div class="container">
              <div class="price-cols row">
                 <h2 class="title text-center">Choose your plan today</h2>
+                <h2 class="title text-center" style="font-size: 20px;">We're in beta, please contact us for details on exact pricing!</h2>
                 <div class="items-wrapper col-md-10 col-sm-12 col-xs-12 col-md-offset-1 col-sm-offset-0 col-xs-offset-0">
                     <div class="item price-1 col-md-4 col-sm-4 col-xs-12 text-center">
                         <div class="item-inner">
@@ -301,7 +300,7 @@
                                     <li class="disabled"><i class="fa fa-times"></i>Email priority support</li>
                                     <li class="disabled"><i class="fa fa-times"></i>24/7 support</li>
                                 </ul>
-                                <a class="btn btn-theme btn-block" href="#">Sign Up</a>
+                                <a class="btn btn-theme btn-block disabled" href="#">Sign Up</a>
    
                             </div><!--//content-->
                         </div><!--//item-inner-->
@@ -322,7 +321,7 @@
                                     <li class="disabled"><i class="fa fa-times"></i>24/7 support</li>
                                     
                                 </ul>
-                                <a class="btn btn-theme btn-block" href="#">Sign Up</a>
+                                <a class="btn btn-theme btn-block disabled" href="#">Sign Up</a>
                             </div><!--//content-->
                             <div class="ribbon">
                                 <div class="text">Popular</div>
@@ -344,7 +343,7 @@
                                     <li><i class="fa fa-check"></i>Email priority support</li>
                                     <li><i class="fa fa-check"></i>24/7 support</li>                                  
                                 </ul>
-                                <a class="btn btn-theme btn-block" href="#">Sign Up</a>
+                                <a class="btn btn-theme btn-block disabled" href="#">Sign Up</a>
                                 
                             </div><!--//content-->
                         </div><!--//item-inner-->
@@ -400,42 +399,7 @@
         </div><!--//modal-dialog-->
     </div><!--//modal-->
     
-    <!-- *****CONFIGURE STYLE (Remove on production site)****** -->
-    <div class="config-wrapper">
-        <div class="config-wrapper-inner">
-            <a id="config-trigger" class="config-trigger" href="#"><i class="fa fa-cog"></i></a>
-            <div id="config-panel" class="config-panel">
-                <h5>Choose Colour</h5>
-                <ul id="color-options" class="list-unstyled list-inline">
-                    <li class="theme-1 active" ><a data-style="stylesheets/styles.css" data-logo="images/logo/logo.png" href="#"></a></li>
-                    <li class="theme-2"><a data-style="stylesheets/styles-2.css" data-logo="images/logo/logo-2.png" href="#"></a></li>
-                    <li class="theme-3"><a data-style="stylesheets/styles-3.css" data-logo="images/logo/logo-3.png" href="#"></a></li>
-                    <li class="theme-4"><a data-style="stylesheets/styles-4.css" data-logo="images/logo/logo-4.png" href="#"></a></li>
-                    
-                    <li class="theme-5"><a data-style="stylesheets/styles-5.css" data-logo="images/logo/logo-5.png" href="#"></a></li> 
-                    
-                    <li class="theme-6"><a data-style="stylesheets/styles-6.css" data-logo="images/logo/logo-6.png" href="#"></a></li>
-                    <li class="theme-7"><a data-style="stylesheets/styles-7.css" data-logo="images/logo/logo-7.png" href="#"></a></li>
-                    <li class="theme-8"><a data-style="stylesheets/styles-8.css" data-logo="images/logo/logo-8.png" href="#"></a></li>
-                    
-                    <li class="theme-9"><a data-style="stylesheets/styles-9.css" data-logo="images/logo/logo-9.png" href="#"></a></li>
-                    <li class="theme-10"><a data-style="stylesheets/styles-10.css" data-logo="images/logo/logo-10.png" href="#"></a></li>
-                    
-                </ul><!--//color-options-->
-                <h5 class="device-title">Choose Device</h5>
-                <ul class="list-unstyled">
-                    <li><a href="index.html">iPhone Black</a></li>
-                    <li><a href="iphone-white.html">iPhone White</a></li>
-                    <li><a href="ipad-white.html">iPad White</a></li>
-                    <li><a href="ipad-black.html">iPad Black</a></li>
-                    <li><a href="android.html">Android</a></li>
-                    <li><a href="iphone-landscape.html">iPhone Landscape <span class="label label-success">New</span></a></li>
-                    <li><a href="android-landscape.html">Android Landscape <span class="label label-success">New</span></a></li>
-                </ul>
-                <a id="config-close" class="close" href="#"><i class="fa fa-times-circle"></i></a>
-            </div><!--//configure-panel-->
-        </div><!--//config-wrapper-inner-->
-    </div><!--//config-wrapper-->
+    
      
     <!-- Javascript -->          
     <script type="text/javascript" src="plugins/jquery-1.11.3.min.js"></script>
