--- a/views/iphone-white.html
+++ b/views/iphone-white.html
@@ -132,7 +132,7 @@
                     <div class="content">
                         <h3 class="title">Impressions By The Millions</h3>
                         <p>If you are looking to put your brand, product, or app put in front of millions of people we can help.  </p>  
-                        <button class="modal-trigger btn btn-link" data-toggle="modal" data-target="#feature-modal-1">Find out more</button>
+                        <!-- <button class="modal-trigger btn btn-link" data-toggle="modal" data-target="#feature-modal-1">Find out more</button> -->
                     </div><!--//content-->               
                 </div><!--//item-->
                 <div class="item col-md-3 col-sm-6 col-xs-12 text-center">
@@ -142,7 +142,7 @@
                     <div class="content">
                         <h3 class="title">Marketing Campaigns</h3>
                         <p>We create fully original and innovative marketing campaigns for app promotions to movie trailers. </p>   
-                        <button class="modal-trigger btn btn-link" data-toggle="modal" data-target="#feature-modal-1">Find out more</button>
+                        <!-- <button class="modal-trigger btn btn-link" data-toggle="modal" data-target="#feature-modal-1">Find out more</button> -->
                     </div><!--//content-->               
                 </div><!--//item-->
                 <div class="item col-md-3 col-sm-6 col-xs-12 text-center">
@@ -152,7 +152,7 @@
                     <div class="content">
                         <h3 class="title">D20NS</h3>
                         <p>We offer a completely automated favorite retweeting service that trades with accounts of a similar size. (based on impressions) </p> 
-                        <button class="modal-trigger btn btn-link" data-toggle="modal" data-target="#feature-modal-1">Find out more</button>  
+                        <!-- <button class="modal-trigger btn btn-link" data-toggle="modal" data-target="#feature-modal-1">Find out more</button> -->  
                     </div><!--//content-->               
                 </div><!--//item-->
                 <div class="item col-md-3 col-sm-6 col-xs-12 text-center">
@@ -162,7 +162,7 @@
                     <div class="content">
                         <h3 class="title">Social Media Post Scheduling</h3>
                         <p>Outline an app feature/benefit here. You can change the icon above to any of the 500+ <a href="http://fortawesome.github.io/Font-Awesome/icons/" target="_blank">FontAwesome icons</a> available. </p>   
-                        <button class="modal-trigger btn btn-link" data-toggle="modal" data-target="#feature-modal-1">Find out more</button>
+                        <!-- <button class="modal-trigger btn btn-link" data-toggle="modal" data-target="#feature-modal-1">Find out more</button> -->
                     </div><!--//content-->               
                 </div><!--//item-->
             </div><!--//row-->
@@ -175,7 +175,7 @@
                     <div class="content">
                         <h3 class="title">Business Consulting</h3>
                         <p>We are here to advise your business at any point whether you’re just starting out or have been in business for decades. </p>  
-                        <button class="modal-trigger btn btn-link" data-toggle="modal" data-target="#feature-modal-1">Find out more</button>
+                        <!-- <button class="modal-trigger btn btn-link" data-toggle="modal" data-target="#feature-modal-1">Find out more</button> -->
                     </div><!--//content-->               
                 </div><!--//item-->
                 <div class="item col-md-4 col-sm-6 col-xs-12 text-center">
@@ -185,7 +185,7 @@
                     <div class="content">
                         <h3 class="title">Build-a-Brand</h3>
                         <p>Outline an app feature/benefit. You can change the icon above to any of the 500+ <a href="http://fortawesome.github.io/Font-Awesome/icons/" target="_blank">FontAwesome icons</a> available. </p>  
-                        <button class="modal-trigger btn btn-link" data-toggle="modal" data-target="#feature-modal-1">Find out more</button>
+                        <!-- <button class="modal-trigger btn btn-link" data-toggle="modal" data-target="#feature-modal-1">Find out more</button> -->
                     </div><!--//content-->               
                 </div><!--//item-->
                 <div class="item col-md-4 col-sm-6 col-xs-12 text-center">
