Removed fields from signup

--- a/views/iphone-white.html
+++ b/views/iphone-white.html
@@ -127,7 +127,7 @@
                 <h2 class="title text-center sr-only">Features</h2>
                 <div class="item col-md-3 col-sm-6 col-xs-12 text-center">
                     <div class="icon">
-                        <i class="fa fa-globe"></i>                
+                        <i class="fa fa-bar-chart"></i>                
                     </div><!--//icon-->
                     <div class="content">
                         <h3 class="title">Impressions By The Millions</h3>
@@ -150,7 +150,7 @@
                         <i class="fa fa-users"></i>                
                     </div><!--//icon-->
                     <div class="content">
-                        <h3 class="title">D20NS</h3>
+                        <h3 class="title">Automated Fav Trading</h3>
                         <p>We offer a completely automated favorite retweeting service that trades with accounts of a similar size. (based on impressions) </p> 
                         <!-- <button class="modal-trigger btn btn-link" data-toggle="modal" data-target="#feature-modal-1">Find out more</button> -->  
                     </div><!--//content-->               
@@ -170,7 +170,7 @@
             <div class="row feature-row-last">
                 <div class="item col-md-4 col-sm-6 col-xs-12 text-center">
                     <div class="icon">
-                        <i class="fa fa-bar-chart"></i>                
+                        <i class="fa fa-binoculars"></i>                
                     </div><!--//icon-->
                     <div class="content">
                         <h3 class="title">Business Consulting</h3>
@@ -180,7 +180,7 @@
                 </div><!--//item-->
                 <div class="item col-md-4 col-sm-6 col-xs-12 text-center">
                     <div class="icon">
-                        <i class="fa fa-cubes"></i>                
+                        <i class="fa fa-paper-plane"></i>                
                     </div><!--//icon-->
                     <div class="content">
                         <h3 class="title">Build-a-Brand</h3>
@@ -209,7 +209,7 @@
                 <h2 class="title text-center">Frequently Asked Questions</h2>
                 <div class="faq-col col-md-6 col-sm-6 col-xs-12">
                     <div class="item">
-                        <h3 class="question"><i class="fa fa-question-circle"></i>How does D20NS work?</h3>
+                        <h3 class="question"><i class="fa fa-question-circle"></i>How does Automated Fav Trading work?</h3>
                         <p class="answer">We've built some pretty complex algorithms to ensure we exceed expectations. We sort your account based on impressions. From there it goes into a pool with similar sized accounts. It then trades 24/7 (unless specified otherwise) with the other accounts in the pool. We guarantee 60+ trades a day which means your impressions will be through the roof.</p>
                     </div><!--//item-->
                     <div class="item">
